src/components/Education/Education.css
.education{
    display: flex;
    flex: 1;
    gap: 0.5rem;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    min-height: auto;
    border-left: 10px solid white;
    border-right: 10px solid white;
    margin-bottom: 15rem;
    height: 100%; 
    border-radius: 20px;
    
}
 .e-journey{
    color: rgb(21, 199, 234);
    font-size: 35px;
    
 }
 .e-heading{
    font-size: 35px;
 }


.i-left{
    display: flex;
    position: relative;
    flex:1;
    flex-direction: column;
    gap:2rem;
}

.edu-right{
    display: flex;
    flex-direction: column;
    flex: 1;
}
.edu-heading{
    position: relative;
    right: 300px;
    font-size: 25px;
}
.ex-heading{
    position: relative;
    bottom:665px;
    left:300px;
    font-size: 25px;
}
.experience{
    position: relative;
    bottom:665px;
    left:600px; 
}
@media screen and (max-width:640px){

    .edu-heading{
        transform: scale(0.8);
        left: -0.2rem;
        top: -1rem;
    }
    .ex-heading{
        transform: scale(0.8);
        left: -0.2rem;
        bottom: 2rem;
    }

}

@media screen and (max-width: 1024px) and (min-width: 768px){
   
    .edu-heading{
        transform: scale(0.8);
        left: -3rem;
        top: -1rem;
    }
    .ex-heading{
        transform: scale(0.8);
        left: -3rem;
        bottom: 2rem;
    }

}
@media screen and (max-width: 1366px) and (min-width: 1024px){
   
    .edu-heading{
        transform: scale(1.2);
        left: 1rem;
        top: -2rem;
    }
    .ex-heading{
        transform: scale(1.2);
        left: 2rem;
        bottom: 2rem;
    }
    .education{
        height: 90vh;
      
    }
    .e-heading{
        transform: scale(1.3);
        
    }

}

